mdapipkg/objects/Audit_Violation_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Audit</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit Violations Tracker</relationshipLabel>
        <relationshipName>Audit_Violations_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Complaint__c</fullName>
        <label>Date of Complaint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <label>Join Date_Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Response__c</fullName>
        <label>Member Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Member Name</description>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audit Violations Tracker</relationshipLabel>
        <relationshipName>Audit_Violations_Tracker</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Violation__c</fullName>
        <label>Violation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Code of Conduct</fullName>
                </value>
                <value>
                    <fullName>Conflict of Interest</fullName>
                </value>
                <value>
                    <fullName>Network Governance</fullName>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                </value>
                <value>
                    <fullName>Trademark Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Violation_Instance__c</fullName>
        <label>Violation Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Audit Violation Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audit Violation Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Violations Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>